# BlocksBeyondTheStars

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  BlocksBeyondTheStars.CI.slnf  BlocksBeyondTheStars.sln  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Dockerfile  IMPLEMENTATION_PLAN.md  NOTICES.md  README.md  SECURITY.md  Spacecraft.sln  TODO.md  anf_admin_blueprinf.md  anf_admin_einstellungen.md  anf_mission_editor.md  anf_space_flight.md  anf_webclient.md  anforderungen.md  coverlet.runsettings  docker-compose.postgres.yml  docker-compose.tls.yml  docker-compose.yml  technische_anforderungen.md
.claude/: settings.json
.github/: pull_request_template.md
ai-backend/: .env.example  README.md  pyproject.toml
ai-backend/app/: llm.py  main.py
client/: README.md
data/: blocks.json  blueprints.json  items.json  missions.json  planets.json  recipes.json  settlement_templates.json  ship_modules.json  ships.json  station_templates.json
docker/: Caddyfile  entrypoint.sh
docs/: ADVANCED_GRAPHICS_PLAN.md  AI_MISSION_BACKEND.md  ART_BIBLE.md  CLIENT_COMPLETION_PLAN.md  CLIENT_SHELL_AND_ASSETS.md  CRAFTING_TECH_SHIP_UI_PLAN.md  CREATURE_TAMING_PLAN.md  DEVELOPER.md  EDITORS_WORLDGEN_AND_DEV_LABELLING_ANALYSIS.md  MUSIC_TRACKS.md  (+18 more)
tools/ai-assets/: .env.example  .gitignore  README.md  bake_leaf_alpha.py  bundle_fire.py  bundle_textures.py  gen_app_icon.py  gen_avatar.py  gen_batch.py  gen_creatures.py  gen_feedback_icon.py  gen_icons.py  gen_image.py  gen_item_icons.py  gen_microfauna.py  gen_sound.py  gen_textures.py  pyproject.toml
(+1074 files in other folders)
