[project]
name = "spacecraft-ai-assets"
version = "0.1.0"
description = "AI asset generators for Spacecraft: text -> sound effect (ElevenLabs) and text -> image/texture (OpenAI). One file per run, cost-gated."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "elevenlabs>=1.50",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
